--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <!-- Mapbox GL JS CSS -->
+    <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+    />
+    <script src="map.js" type="module"></script>
     <title>Bike Traffic</title>
 </head>
 <body>
-    <h1>Tracking Bike Traffic in Boston</h1>
-    <p>This is an immersive, interactive map visualization of bike traffic in the Boston area during different times of the day.</p>
+    <h1>Tracking Bike Traffic in Boston 🚴🏼‍♀️</h1>
+      <div id="time-container">
+        <label for="time-slider">
+          Filter by time: <time id="selected-time"></time><em id="any-time">(any time)</em>
+        </label>
+        <input id="time-slider" type="range" min="-1" max="1439" value="-1" step="15">
+      </div>      
+    <div id="map">
+        <svg></svg>
+    </div>
+    <div class="legend">
+        <div style="--departure-ratio: 1">More departures</div>
+        <div style="--departure-ratio: 0.5">Balanced</div>
+        <div style="--departure-ratio: 0">More arrivals</div>
+    </div>
 </body>
 </html>
